# cpandas

./: .gitignore  CMakeLists.txt  CONVERSION_STATUS.md  PANDAS_FUNCTIONS_GFG.md  PRD.md  README.md
.github/workflows/: ci.yml
benchmarks/: benchmark_cpandas.c
include/: cpandas.h
src/: cpandas.c  cpandas_parquet.cpp
tests/: test_cpandas.c  test_csv_fuzz.c  test_parity.c
tests/fixtures/: nested_struct.parquet
tests/parity/: README.md
tests/parity/expected/: describe.json  dropna.json  groupby_sales_sum.json  head.json  sort_sales.json  tail.json
tests/parity/inputs/: basic.csv
